--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
